I updated me application. Now I can change User Profile on main page 'Profile', when I am clicking to any User on page 'Users'.

--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -4,4 +4,22 @@
 
 .descriptionBlock {
     padding: 10px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.imageContainer {
+    height: 300px;
+    width: 300px;
+    margin-right: 50px;
+}
+
+.imageContainer img {
+    width: 100%;
+    height: 100%;
+}
+
+.userDataContainer {
+    display: flex;
+    flex-direction: column;
 }
