I updated me application. I added opportunity to add any person to friend

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,4 +5,37 @@
 .header {
     grid-area: h;
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.userDataBlock {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 200px;
+}
+
+.userDataBlock img {
+    width: 50px;
+    border-radius: 50%;
+}
+
+.userName {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.loginBlock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loginBlock a {
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
+    font-weight: 600;
 }
