--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 200px;
+    width: 250px;
 }
 
 .userDataBlock img {
@@ -35,7 +35,7 @@
 
 .loginBlock a {
     text-decoration: none;
-    font-size: 20px;
-    color: black;
+    font-size: 16px;
+    color: #bb8d47;
     font-weight: 600;
 }
