--- a/src/components/Login/LoginForm/LoginForm.module.css
+++ b/src/components/Login/LoginForm/LoginForm.module.css
@@ -15,3 +15,12 @@
 .form label {
     font-weight: 600;
 }
+
+.errorForm {
+    border: 2px solid red;
+    outline:none;
+}
+
+.errorMessage {
+    color: red;
+}
